Formatter fix